--- a/tic_tac_toe/src/index.css
+++ b/tic_tac_toe/src/index.css
@@ -1,12 +1,11 @@
+
 * {
+  background: #22c1c3;
+
   box-sizing: border-box;
 }
 
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
+
 
 h1 {
   margin-top: 0;
@@ -57,18 +56,20 @@ body {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);border: 1px solid #999;
   float: left;
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 70px;
+  height: 70px;
+  font-family: 'Chokokutai', cursive;
+  
 }
 
 .board-row:after {
@@ -79,6 +80,10 @@ body {
 
 .status {
   margin-bottom: 10px;
+  weight: bold;
+  font-size: 20px;
+  color: #fdf31d;
+  
 }
 .game {
   display: flex;
@@ -87,6 +92,11 @@ body {
 
 .game-info {
   margin-left: 20px;
+  background:  -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: opaque;
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 200px) {
